--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/casper"]
 	path = themes/casper
-	url = https://github.com/vjeantet/hugo-theme-casper
+	url = https://github.com/vjeantet/hugo-theme-casper.git
