updated config and casper theme reference

--- a/config.toml
+++ b/config.toml
@@ -9,8 +9,10 @@ Copyright = "All rights reserved - 2015"
   description = "Whatever the mind of man can conceive and believe, it can achieve."
   cover = "images/cover_polenord.jpg"
   author = "Valère JEANTET"
-  logo = "images/logo.png"
+  authorlocation = "Paris, France"
+  authorwebsite = "http://vjeantet.fr"
   bio= "my bio"
+  logo = "images/logo.png"
   googleAnalyticsUserID = "UA-79101-12"
   githubName = "vjeantet"
   twitterName = "vjeantet"
