--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ Copyright = "All rights reserved - 2015"
   author = "Valère JEANTET"
   authorlocation = "Paris, France"
   authorwebsite = "http://vjeantet.fr"
-  bio= "my bio"
+  bio= "IT software and Security Engineer, Open source enthusiast."
   logo = "images/logo.png"
   googleAnalyticsUserID = "UA-79101-12"
   githubName = "vjeantet"
