--- a/config.toml
+++ b/config.toml
@@ -16,6 +16,8 @@ Copyright = "All rights reserved - 2015"
   googleAnalyticsUserID = "UA-79101-12"
   githubName = "vjeantet"
   twitterName = "vjeantet"
+  # set true if you are not proud of using Hugo (true will hide the footer note "Proudly published with HUGO.....")
+  hideHUGOSupport = false
 
 
 [permalinks]
