--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ Copyright = "All rights reserved - 2015"
 theme = "casper"
 [params]
   description = "Whatever the mind of man can conceive and believe, it can achieve."
-  cover = "images/cover_polenord.jpg"
+  cover = "https://lut.im/aScZMFT8fA/1XOZ5UHe.jpg"
   author = "Valère JEANTET"
   authorlocation = "Paris, France"
   authorwebsite = "http://vjeantet.fr"
