--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseurl = "http://vjeantet.fr/"
-copyright = "All rights reserved - 2016"
+copyright = "All rights reserved"
 disqusshortname = "vjeantet"
 languagecode = "fr-FR"
 paginate = 5
@@ -29,11 +29,12 @@ name = "Keybase (secure msg)"
 pre = "<h3>Contact me</h3>"
 url = "https://Keybase.io/vjeantet"
 weight = 109
+
 [params]
 author = "Valère JEANTET"
 authorlocation = "Paris, France"
 authorwebsite = "http://vjeantet.fr"
-bio = "IT software and Security Engineer, Open source enthusiast."
+authorbio = "IT software and Security Engineer, Open source enthusiast."
 cover = "images/cover_polenord.jpg"
 description = "Whatever the mind of man can conceive and believe, it can achieve."
 githubName = "vjeantet"
