--- a/config.toml
+++ b/config.toml
@@ -26,7 +26,7 @@ url = "https://flipboard.com/@vjeantet"
 weight = 102
 [[menu.main]]
 name = "Keybase (secure msg)"
-pre = "<h3>Contact me</h3>"
+pre = "<a rel="me" href="https://infosec.exchange/@vjeantet">Mastodon</a><h3>Contact me</h3>"
 url = "https://Keybase.io/vjeantet"
 weight = 109
 
