--- a/config.toml
+++ b/config.toml
@@ -26,7 +26,7 @@ url = "https://infosec.exchange/@vjeantet"
 weight = 101
 [[menu.main]]
 name = "Keybase (secure msg)"
-pre = '<a rel="me" href="https://infosec.exchange/@vjeantet">Mastodon</a><h3>Contact me</h3>'
+pre = '<a style="display:none" rel="me" href="https://infosec.exchange/@vjeantet">Mastodon</a><h3>Contact me</h3>'
 url = "https://Keybase.io/vjeantet"
 weight = 109
 
